[package]
name = "stack"
version = "0.1.0"
edition = "2021"
authors = [
    "Josef Zoller <josef@walterzollerpiano.com>",
    "Hannes Furmans <info@umgefahren.xyz>",
]
rust-version = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
arboard = { version = "3.4.0", optional = true }
base64-simd = { workspace = true }
bridge = { workspace = true }
bytes = { workspace = true, features = ["serde"] }
clap = { workspace = true }
console-subscriber = { version = "0.4.0", optional = true }
dirs = "5.0.1"
docker = { workspace = true, features = ["zstd"] }
futures = { workspace = true }
ifaddr = { workspace = true }
ifwatcher = { workspace = true, optional = true }
indicatif = { version = "0.17.8", features = ["tokio", "in_memory"] }
libp2p = { workspace = true, features = [
    "tokio",
    "identify",
    "kad",
    "gossipsub",
] }
macaddress = { workspace = true }
netdev = { version = "0.31.0", optional = true }
patricia_tree = "0.8.0"
pin-project = { workspace = true }
p2p-industries-core = { workspace = true }
p2p-stack = { workspace = true }
rand = { workspace = true }
rustyline = { version = "14.0.0", features = ["derive"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
ulid = { workspace = true }
toml = "0.8.13"
smallvec = { version = "1.13.2", features = ["const_generics"] }
redb = "2.1.1"
tracing-appender = "0.2.3"

[features]
batman = ["bridge/batman", "p2p-stack/batman", "dep:ifwatcher", "dep:netdev"]
clipboard = ["dep:arboard"]
console-subscriber = ["dep:console-subscriber"]
location = ["p2p-stack/location"]
mdns = ["p2p-stack/mdns"]

[package.metadata.deb]
name = "p2p-industries-stack"
features = ["batman"]
depends = "batman-neighbours-daemon, docker-ce, iproute2, net-tools, wpasupplicant"
assets = [
    [
        "target/release/stack",
        "usr/bin/p2p-industries-stack",
        "755",
    ],
    [
        "systemd/assets/config.toml",
        "/usr/lib/p2p-industries-stack/",
        "644",
    ],
    [
        "systemd/assets/network-manager-disable-batman-interfaces.conf",
        "/etc/NetworkManager/conf.d/disable-batman-interfaces.conf",
        "644",
    ],
    [
        "systemd/assets/wpa_supplicant-wlan0.conf",
        "/etc/wpa_supplicant/",
        "600",
    ],
]
maintainer-scripts = "systemd/debian/"
systemd-units = [{ unit-name = "p2p-industries-stack", enable = true }]

[package.metadata.deb.variants.raspbian]
systemd-units = [
    { unit-name = "p2p-industries-stack", enable = true },
    { unit-name = "p2p-industries-batman", enable = false },
]
