[tool.poetry]
name = "garden"
version = "0.1.0"
description = ""
authors = ["umgefahren <55623006+umgefahren@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Adafruit-Blinka = "^8.39.2"
adafruit-circuitpython-ahtx0 = "^1.0.21"
adafruit-circuitpython-bh1750 = "^1.1.10"
gpiozero = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
