[package]
name = "data-collector"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
http-body-util = "0.1.2"
hyper = { version = "1.6.0", features = ["server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
hyveos-sdk.workspace = true
prometheus = "0.13.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
