[package]
name = "ws-graph"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["http2", "ws"] }
p2p-industries-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"]  }
serde = { workspace = true }
serde_json = "1.0.125"
anyhow = { workspace = true }
futures = { workspace = true}
libp2p-identity = { workspace = true, optional = true, features = ["rand"] }
rand = { workspace = true, optional = true }

[features]
faker = ["dep:rand", "dep:libp2p-identity", "tokio/time"]
