[package]
name = "ws-graph"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.8.1", features = ["http2", "ws"] }
hyveos-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
libp2p-identity = { workspace = true, optional = true, features = ["rand"] }
rand = { workspace = true, optional = true }
tower-http = { version = "0.6.1", features = [
    "compression-gzip",
    "compression-br",
    "decompression-gzip",
    "decompression-br",
] }
tower = "0.5.2"
ulid = { workspace = true }

[features]
faker = ["dep:rand", "dep:libp2p-identity", "tokio/time"]
frontend = ["tower-http/fs"]
