[package]
name = "libp2p-batman-adv"
version = "0.1.0"
edition = "2021"

[dependencies]
batman-neighbours-core = { workspace = true }
macaddress = { workspace = true }
anyhow = { workspace = true }
libp2p = { workspace = true }
tarpc = { workspace = true, features = ["serde-transport", "serde-transport-bincode", "unix"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
void = "1.0.2"
