[package]
name = "libp2p-batman-adv"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
authors = ["Josef Zoller <josef@walterzollerpiano.com>"]

[dependencies]
batman-neighbours-core = { workspace = true }
macaddress = { workspace = true }
libp2p = { workspace = true, features = ["serde"] }
rand = { workspace = true }
serde = { workspace = true }
tarpc = { workspace = true, features = [
    "serde-transport",
    "serde-transport-bincode",
    "unix",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
void = "1.0.2"
futures = "0.3.30"
libc = "0.2.153"
itertools = "0.12.1"
socket2 = "0.5.7"
bincode = "1.3.3"
hashlink = "0.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14.1"
netlink-proto = "0.11.3"
netlink-packet-core = { workspace = true }
netlink-packet-route = "0.19.0"
