[package]
name = "hyveos-sdk"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
license = "MIT or Apache-2.0"

[dependencies]
derive-where = "1.2.7"
futures = { workspace = true }
hyper-util = { version = "0.1.10", features = ["tokio"] }
libp2p-identity = { workspace = true, features = ["peerid"] }
http = { version = "1.2.0", optional = true }
hyveos-core = { workspace = true }
hyveos-ifaddr = { workspace = true, optional = true }
pin-project = { workspace = true }
prost = { workspace = true }
reqwest = { version = "0.12.11", default-features = false, features = [
    "charset",
    "http2",
    "json",
    "stream",
], optional = true }
serde = { workspace = true, optional = true }
serde_cbor = { version = "0.11.2", optional = true }
serde_json = { version = "1.0.118", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tonic = { workspace = true }
tower = { version = "0.5.2", features = ["util"] }
tracing = { workspace = true }
ulid = { workspace = true }
url = { version = "2.5.4", optional = true }

[dev-dependencies]
hyveos-sdk = { path = ".", features = ["cbor", "json"] }
indicatif = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

[features]
default = ["cbor"]
network = [
    "hyveos-core/serde",
    "dep:hyveos-ifaddr",
    "dep:http",
    "dep:reqwest",
    "dep:tokio-util",
    "dep:tokio-stream",
    "dep:url",
]
serde = ["hyveos-core/serde", "dep:serde"]
json = ["serde", "dep:serde_json"]
cbor = ["serde", "dep:serde_cbor"]
scripting = ["hyveos-core/scripting"]

[package.metadata.docs.rs]
all-features = true
